GAP IN TITLES NOW FIXED

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -25,7 +25,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0.5em 0 0.5em;
+  margin: 0.75em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
   font-weight: bold;
